force-app/main/default/objects/hed__Program_Enrollment__c/fields/Absence_Intervention_Plan__c.field-meta.xml
<CustomField>
    <fullName>Absence_Intervention_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the student currently on an absence intervention plan</description>
    <label>Absence Intervention Plan</label>
    <type>Checkbox</type>
</CustomField>