force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Doc_Performance__c.field-meta.xml
<CustomField>
    <fullName>Academic_Doc_Performance__c</fullName>
    <description>Does this student&apos;s academic documentation reflect his or her academic ability</description>
    <label>Academic Doc Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>