force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Doc_Performance_Why__c.field-meta.xml
<CustomField>
    <fullName>Academic_Doc_Performance_Why__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Doc Performance Why</label>
    <type>TextArea</type>
</CustomField>