force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Documentation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Academic_Documentation_Summary__c</fullName>
    <label>Academic Documentation Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>