force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Performance_Counter__c.field-meta.xml
<CustomField>
    <fullName>Academic_Performance_Counter__c</fullName>
    <description>Academic Performance Counter</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Priority for Review</inlineHelpText>
    <label>Academic Performance Counter</label>
    <type>TextArea</type>
</CustomField>