force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Performance_Elg_Description__c.field-meta.xml
<CustomField>
    <fullName>Academic_Performance_Elg_Description__c</fullName>
    <description>Academic Performance Eligibility Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Performance Elg Description</label>
    <type>TextArea</type>
</CustomField>