force-app/main/default/objects/hed__Program_Enrollment__c/fields/Academic_Program_With_Grade__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_With_Grade__c</fullName>
    <formula>IF( AND(RecordType.Name = &apos;Student&apos;,NOT(ISBLANK(Program_Grade_Level__c)),NOT(ISBLANK(hed__Account__c)) ) ,hed__Account__r.Name +&apos;|&apos;+Program_Grade_Level__r.Grade_Level__r.Name, &apos;&apos;)</formula>
    <label>Academic Program With Grade</label>
    <type>Text</type>
</CustomField>