force-app/main/default/objects/hed__Program_Enrollment__c/fields/AcademicPerformanceEligibility__c.field-meta.xml
<CustomField>
    <fullName>AcademicPerformanceEligibility__c</fullName>
    <label>Academic Performance Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed to Enroll</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Need additional information</fullName>
                <isActive>false</isActive>
                <label>Need additional information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>