force-app/main/default/objects/hed__Program_Enrollment__c/fields/Address_of_previous_school__c.field-meta.xml
<CustomField>
    <fullName>Address_of_previous_school__c</fullName>
    <description>Street address of the current (most recent) school</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address of previous school</label>
    <length>255</length>
    <type>Text</type>
</CustomField>