force-app/main/default/objects/hed__Program_Enrollment__c/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>