force-app/main/default/objects/hed__Program_Enrollment__c/fields/AddressEligibility__c.field-meta.xml
<CustomField>
    <fullName>AddressEligibility__c</fullName>
    <description>This is the final value for the address eligibility.</description>
    <formula>IF(TEXT(AddressEligibilitySystem__c)=&apos;Eligible&apos;, &apos;Eligible&apos;, 
    IF(NOT(ISBLANK(TEXT(AddressEligibilityOverride__c))), TEXT(AddressEligibilityOverride__c), 
        TEXT(AddressEligibilitySystem__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Eligibility (Final)</label>
    <type>Text</type>
</CustomField>