force-app/main/default/objects/hed__Program_Enrollment__c/fields/AddressEligibilityOverride__c.field-meta.xml
<CustomField>
    <fullName>AddressEligibilityOverride__c</fullName>
    <description>This field can be set by a user to override address eligibility (system)</description>
    <inlineHelpText>Set this value if you want to override the Address Eligibility (System)</inlineHelpText>
    <label>Address Eligibility (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>