force-app/main/default/objects/hed__Program_Enrollment__c/fields/AddressEligibilitySystem__c.field-meta.xml
<CustomField>
    <fullName>AddressEligibilitySystem__c</fullName>
    <description>This field will be set from code and not set by a user.  If a user wants to override this value they will update the Address Eligibility Override.  There will be a formula that will mash these together to give us the final Value.</description>
    <inlineHelpText>This field will be set from code and not set by a user.</inlineHelpText>
    <label>Address Eligibility (System)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>