force-app/main/default/objects/hed__Program_Enrollment__c/fields/Age_Elg_Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Age_Elg_Testing_Status__c</fullName>
    <description>Kindergarten Age Eligibility Testing Status</description>
    <label>Age Elg Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allowed to enroll</fullName>
            </value>
            <value>
                <fullName>Caretaker requested an exception</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Provide information to the caretaker about testing</fullName>
            </value>
            <value>
                <fullName>Testing in progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>