force-app/main/default/objects/hed__Program_Enrollment__c/fields/APS_Onboarding_Advisor__c.field-meta.xml
<CustomField>
    <fullName>APS_Onboarding_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Academic Placement Services Onboarding Advisor</description>
    <label>APS Onboarding Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>