force-app/main/default/objects/hed__Program_Enrollment__c/fields/APSPostponeContactReason__c.field-meta.xml
<CustomField>
    <fullName>APSPostponeContactReason__c</fullName>
    <description>Reason for Placement Postpone Outbound Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>APS Postpone Contact Reason</label>
    <type>TextArea</type>
</CustomField>