force-app/main/default/objects/hed__Program_Enrollment__c/fields/Attended_other_school_since_withdrawing__c.field-meta.xml
<CustomField>
    <fullName>Attended_other_school_since_withdrawing__c</fullName>
    <description>This field is created as part of 215031. Referred in Enrollment configuration.</description>
    <label>Attended other school since withdrawing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>