force-app/main/default/objects/hed__Program_Enrollment__c/fields/AttendReviewDescription__c.field-meta.xml
<CustomField>
    <fullName>AttendReviewDescription__c</fullName>
    <description>Prior School Attendance Pending Review Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Attend Review Description</label>
    <type>TextArea</type>
</CustomField>