force-app/main/default/objects/hed__Program_Enrollment__c/fields/Barriers__c.field-meta.xml
<CustomField>
    <fullName>Barriers__c</fullName>
    <label>Barriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repeated at least one grade, Was absent more than ten percent during the last semester</fullName>
            </value>
            <value>
                <fullName>Has a current overall grade point average less than 1.5</fullName>
            </value>
            <value>
                <fullName>Has failed one or more academic subjects in the past year</fullName>
            </value>
            <value>
                <fullName>Is two or more semester credits behind</fullName>
            </value>
            <value>
                <fullName>Has attended three or more schools within the previous two years</fullName>
            </value>
            <value>
                <fullName>Has a documented, or pattern of, substance abuse</fullName>
            </value>
            <value>
                <fullName>Is pregnant or a parent</fullName>
            </value>
            <value>
                <fullName>Is an emancipated or unaccompanied youth</fullName>
            </value>
            <value>
                <fullName>Is a previous dropout</fullName>
            </value>
            <value>
                <fullName>Has serious personal, emotional, or medical issues</fullName>
            </value>
            <value>
                <fullName>Has a court or agency referral</fullName>
            </value>
            <value>
                <fullName>Demonstrates behavior that is detrimental to academic progress</fullName>
            </value>
            <value>
                <fullName>Is below proficient based on local criteria</fullName>
            </value>
            <value>
                <fullName>standardized test, or both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>