force-app/main/default/objects/hed__Program_Enrollment__c/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CallType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>