force-app/main/default/objects/hed__Program_Enrollment__c/fields/CareerPathways__c.field-meta.xml
<CustomField>
    <fullName>CareerPathways__c</fullName>
    <label>CareerPathways</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Science</fullName>
            </value>
            <value>
                <fullName>Hospitality and Human Services</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Arts, A/V, and Communication</fullName>
            </value>
            <value>
                <fullName>Business and Marketing</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Cosmetology</fullName>
            </value>
            <value>
                <fullName>Culinary Arts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>