force-app/main/default/objects/hed__Program_Enrollment__c/fields/Caretaker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Contact__c</fullName>
    <description>Formula Field is creating for the US # 340819, And this is used in the flow to get caretaker contact</description>
    <formula>IF(RecordType.Name =&apos;Caretaker&apos;, hed__Contact__c,Household_Program_Enrollment__r.hed__Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caretaker Contact</label>
    <type>Text</type>
</CustomField>