force-app/main/default/objects/hed__Program_Enrollment__c/fields/Caretaker_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Contact_ID__c</fullName>
    <formula>CASESAFEID(  hed__Contact__r.Caretaker_Id__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caretaker Contact ID</label>
    <type>Text</type>
</CustomField>