force-app/main/default/objects/hed__Program_Enrollment__c/fields/Caretaker_Email__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_Email__c</fullName>
    <description>Needed for reporting purpose</description>
    <formula>Household_Program_Enrollment__r.hed__Contact__r.PCx_User_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caretaker Email</label>
    <type>Text</type>
</CustomField>