force-app/main/default/objects/hed__Program_Enrollment__c/fields/Caretaker_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Caretaker_First_Name__c</fullName>
    <description>Needed for an email template that is sent to the CareTaker.</description>
    <formula>Household_Program_Enrollment__r.hed__Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caretaker First Name</label>
    <type>Text</type>
</CustomField>