force-app/main/default/objects/hed__Program_Enrollment__c/fields/CAWaitlistPlacementOptionCalc__c.field-meta.xml
<CustomField>
    <fullName>CAWaitlistPlacementOptionCalc__c</fullName>
    <description>Waitlist Placement Option</description>
    <label>Waitlist Placement Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>