force-app/main/default/objects/hed__Program_Enrollment__c/fields/City_of_prev_school__c.field-meta.xml
<CustomField>
    <fullName>City_of_prev_school__c</fullName>
    <description>City of current (most recent) school</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City of prev school</label>
    <length>100</length>
    <type>Text</type>
</CustomField>