force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_ApproveDisciplineFlag__c.field-meta.xml
<CustomField>
    <fullName>CL_ApproveDisciplineFlag__c</fullName>
    <description>Approved by Regional Sr PM/AD</description>
    <label>CL Approve Discipline Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>