force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_DisciplineFlagSetDate__c.field-meta.xml
<CustomField>
    <fullName>CL_DisciplineFlagSetDate__c</fullName>
    <description>Date flag was set (autopopulated)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CL Discipline Flag Set Date</label>
    <type>Date</type>
</CustomField>