force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_PaySource_SpringAll__c.field-meta.xml
<CustomField>
    <fullName>CL_PaySource_SpringAll__c</fullName>
    <description>All Spring Section Pay Sources</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Low Priority for Review</inlineHelpText>
    <label>CL Pay Source Spring All</label>
    <type>TextArea</type>
</CustomField>