force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_PrntFund_TotalCrdt_Fall__c.field-meta.xml
<CustomField>
    <fullName>CL_PrntFund_TotalCrdt_Fall__c</fullName>
    <description>Total Fall Credits for Parent Funded Courses</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Low Priority for Review</inlineHelpText>
    <label>CL Prnt Fund Total Crdt Fall</label>
    <type>TextArea</type>
</CustomField>