force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_SeniorCreditCheckDate__c.field-meta.xml
<CustomField>
    <fullName>CL_SeniorCreditCheckDate__c</fullName>
    <description>Senior Credit Check Complete</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CL Senior Credit Check Date</label>
    <type>Date</type>
</CustomField>