force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_SeniorCreditCheckRequired__c.field-meta.xml
<CustomField>
    <fullName>CL_SeniorCreditCheckRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Senior Credit Check Required</description>
    <label>CL Senior Credit Check Required</label>
    <type>Checkbox</type>
</CustomField>