force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_StFund_TotalCredit_Sprg__c.field-meta.xml
<CustomField>
    <fullName>CL_StFund_TotalCredit_Sprg__c</fullName>
    <description>Total Spring Credits for State Funded Courses</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Low Priority for Review</inlineHelpText>
    <label>CL StFund TotalCredit Sprg</label>
    <type>TextArea</type>
</CustomField>