force-app/main/default/objects/hed__Program_Enrollment__c/fields/CL_Waitlist_Total_Crdt_Sprg__c.field-meta.xml
<CustomField>
    <fullName>CL_Waitlist_Total_Crdt_Sprg__c</fullName>
    <description>Total Spring Credits for Waitlist Courses</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Low Priority for Review</inlineHelpText>
    <label>CL Waitlist Total Crdt Sprg</label>
    <type>TextArea</type>
</CustomField>