force-app/main/default/objects/hed__Program_Enrollment__c/fields/Cohort_Elg_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Elg_Review_Description__c</fullName>
    <description>Cohort Eligibility Pending Review Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cohort Elg Review Description</label>
    <type>TextArea</type>
</CustomField>