force-app/main/default/objects/hed__Program_Enrollment__c/fields/Cohort_Grade__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Grade__c</fullName>
    <description>Cohort Grade</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Logic Added to Document</inlineHelpText>
    <label>Cohort Grade</label>
    <type>TextArea</type>
</CustomField>