force-app/main/default/objects/hed__Program_Enrollment__c/fields/Cohort_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Graduation_Year__c</fullName>
    <description>Cohort Graduation Year</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Logic Added to Document</inlineHelpText>
    <label>Cohort Graduation Year</label>
    <type>TextArea</type>
</CustomField>