force-app/main/default/objects/hed__Program_Enrollment__c/fields/Cohort_Year__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Year__c</fullName>
    <description>What year did the student first enter 9th grade</description>
    <label>Cohort Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2002-03</fullName>
            </value>
            <value>
                <fullName>2003-04</fullName>
            </value>
            <value>
                <fullName>2004-05</fullName>
            </value>
            <value>
                <fullName>2005-06</fullName>
            </value>
            <value>
                <fullName>2006-07</fullName>
            </value>
            <value>
                <fullName>2007-08</fullName>
            </value>
            <value>
                <fullName>2008-09</fullName>
            </value>
            <value>
                <fullName>2009-10</fullName>
            </value>
            <value>
                <fullName>2010-11</fullName>
            </value>
            <value>
                <fullName>2011-12</fullName>
            </value>
            <value>
                <fullName>2012-13</fullName>
            </value>
            <value>
                <fullName>2013-14</fullName>
            </value>
            <value>
                <fullName>2014-15</fullName>
            </value>
            <value>
                <fullName>2015-16</fullName>
            </value>
            <value>
                <fullName>2016-17</fullName>
            </value>
            <value>
                <fullName>2017-18</fullName>
            </value>
            <value>
                <fullName>2018-19</fullName>
            </value>
            <value>
                <fullName>Prior to 2002-03</fullName>
            </value>
            <value>
                <fullName>2021-22</fullName>
            </value>
            <value>
                <fullName>2020-21</fullName>
            </value>
            <value>
                <fullName>2019-20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>