force-app/main/default/objects/hed__Program_Enrollment__c/fields/CohortEligibility__c.field-meta.xml
<CustomField>
    <fullName>CohortEligibility__c</fullName>
    <label>Cohort Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed to Enroll</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Cohort 2016-2017 or earlier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>