force-app/main/default/objects/hed__Program_Enrollment__c/fields/ComputerSelection__c.field-meta.xml
<CustomField>
    <fullName>ComputerSelection__c</fullName>
    <label>ComputerSelection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connections Academy Computer / Temporary Use of Another Computer</fullName>
            </value>
            <value>
                <fullName>Connections Academy Computer</fullName>
            </value>
            <value>
                <fullName>Shared Connections Academy Computer</fullName>
            </value>
            <value>
                <fullName>Family-owned Home Computer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>