force-app/main/default/objects/hed__Program_Enrollment__c/fields/Concatenated_Status__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Status__c</fullName>
    <description>Related to US # 186957 (Task# 195460, 195459). This field is a combination of previous status value of the PE record and current status value on the PE record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Concatenated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>