force-app/main/default/objects/hed__Program_Enrollment__c/fields/ConsiderationsForPlacement__c.field-meta.xml
<CustomField>
    <fullName>ConsiderationsForPlacement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Considerations For Placement</label>
    <type>TextArea</type>
</CustomField>