force-app/main/default/objects/hed__Program_Enrollment__c/fields/Contact_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Follow_Up_Date__c</fullName>
    <description>Communication Follow Up Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Follow Up Date</label>
    <type>Date</type>
</CustomField>