force-app/main/default/objects/hed__Program_Enrollment__c/fields/Contact_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Contact_RecordType__c</fullName>
    <description>ADO #162232 - (Student Withdrawn KBA Visibility)
Used to find out the Record Type of the Contact</description>
    <formula>hed__Contact__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact RecordType</label>
    <type>Text</type>
</CustomField>