force-app/main/default/objects/hed__Program_Enrollment__c/fields/Contact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Contact_Summary__c</fullName>
    <description>Value Summary: APS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>