force-app/main/default/objects/hed__Program_Enrollment__c/fields/ContactSchool__c.field-meta.xml
<CustomField>
    <fullName>ContactSchool__c</fullName>
    <formula>hed__Contact__r.Contact_Id__c  +  School_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactSchool</label>
    <type>Text</type>
</CustomField>