force-app/main/default/objects/hed__Program_Enrollment__c/fields/CounselingFlag__c.field-meta.xml
<CustomField>
    <fullName>CounselingFlag__c</fullName>
    <description>Program Fit Flag</description>
    <label>Program Fit Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>