force-app/main/default/objects/hed__Program_Enrollment__c/fields/Counselor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Comments__c</fullName>
    <label>Counselor Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear to graduate</fullName>
            </value>
            <value>
                <fullName>Stop promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>