force-app/main/default/objects/hed__Program_Enrollment__c/fields/Counselor_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Review_Description__c</fullName>
    <description>Counselor Review Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Counselor Review Description</label>
    <type>TextArea</type>
</CustomField>