force-app/main/default/objects/hed__Program_Enrollment__c/fields/Credit_for_HS_Coursework__c.field-meta.xml
<CustomField>
    <fullName>Credit_for_HS_Coursework__c</fullName>
    <description>Has your student previously earned any high school credit</description>
    <label>Credit for HS Coursework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>