force-app/main/default/objects/hed__Program_Enrollment__c/fields/CreditByExamScores__c.field-meta.xml
<CustomField>
    <fullName>CreditByExamScores__c</fullName>
    <label>Credit By Exam Scores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>