force-app/main/default/objects/hed__Program_Enrollment__c/fields/Current_User_Check__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Check__c</fullName>
    <description>Formula field used to check the Current User against the Reviewer field.  Used to effectively filter listviews</description>
    <formula>IF( Reviewer__r.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>