force-app/main/default/objects/hed__Program_Enrollment__c/fields/Date_Assigned_To_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned_To_Advisor__c</fullName>
    <description>Initial Assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Priority for Review</inlineHelpText>
    <label>Date Assigned To Advisor</label>
    <type>Date</type>
</CustomField>