force-app/main/default/objects/hed__Program_Enrollment__c/fields/Date_Eligible_For_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_Eligible_For_Call__c</fullName>
    <description>Eligible for Onboarding or Welcome call</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Priority for Review</inlineHelpText>
    <label>Date Eligible For Call</label>
    <type>Date</type>
</CustomField>